[tool.poetry]
name = "flagsmith"
version = "5.3.0"
description = "Flagsmith Python SDK"
authors = ["Flagsmith <support@flagsmith.com>"]
license = "BSD3"
readme = "README.md"
keywords = ["feature", "flag", "flagsmith", "remote", "config"]
documentation = "https://docs.flagsmith.com"
packages = [{ include = "flagsmith" }]

[tool.poetry.dependencies]
flagsmith-flag-engine = "^10.0.4"
iso8601 = { version = "^2.1.0", python = "<3.11" }
python = ">=3.9,<4"
requests = "^2.32.3"
requests-futures = "^1.0.1"
sseclient-py = "^1.8.0"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = { version = "^1.16.1", python = ">=3.9,<4" }
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.6.1"
pre-commit = { version = "^4.2.0", python = ">=3.9,<4" }
responses = "^0.24.1"
types-requests = "^2.32"
pyfakefs = "^5.9.2"
pytest-httpserver = {version = "^1.1.0", python = ">=3.10,<4"}

[tool.mypy]
exclude = ["example/*"]

[[tool.mypy.overrides]]
# pytest-httpserver requires python>=3.10, so it is not installed in
# the 3.9 dev environment and mypy cannot find its stubs there.
module = "pytest_httpserver"
ignore_missing_imports = true

[tool.black]
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
